# gateway_mini

./: connection.h  event_loop.c  event_loop.h  gateway_nonblocksocket.c  state_machine.c  state_machine.h
gateway_onetoone/: CMakeLists.txt  main.c
gateway_onetoone/include/protocol/: mcu_protocol.h
gateway_onetoone/include/transport/: tcp_listener.h  unix_listener.h
gateway_onetoone/src/core/: connection.c  connection.h  event_loop.c  event_loop.h  state_machine.c
gateway_onetoone/src/protocol/: mcu_protocol.c  mcu_protocol.h
gateway_onetoone/src/transport/: tcp_listener.c  tcp_listener.h  unix_listener.c
gateway_pubsub/: CMakeLists.txt  main.c
gateway_pubsub/include/bus/: event_bus.h
gateway_pubsub/include/core/: connection.h  event_loop.h
gateway_pubsub/include/protocol/: mcu_protocol.h
gateway_pubsub/include/transport/: unix_listener.h
gateway_pubsub/src/bus/: event_bus.c
gateway_pubsub/src/core/: connection.c  event_loop.c  state_machine.c
gateway_pubsub/src/protocol/: mcu_protocol.c
gateway_pubsub/src/transport/: tcp_listener.c  unix_listener.c  util.c  util.h
